Admin Reduce the column & table sorting fixed.
Admin - Reduce the Column width as per the data, it will reduce the horizontal scroll

--- a/src/app/modules/admin/view-catalogue/components/view-catalogue/view-catalogue.component.scss
+++ b/src/app/modules/admin/view-catalogue/components/view-catalogue/view-catalogue.component.scss
@@ -83,7 +83,7 @@
   th {
     padding: 15px;
     text-align: center;
-    min-width: 115px;
+    min-width: 100px;
     max-height: fit-content;
     border: 1px solid gray !important;
     color: #363636;
@@ -121,7 +121,7 @@
   .the-container th {
     padding: 15px;
     text-align: center;
-    min-width: 140px;
+    min-width: 100px;
     max-height: fit-content;
     border: 1px solid gray !important;
     color: #363636;
@@ -135,7 +135,7 @@
 
   th.mat-header-cell,
   td {
-    min-width: 250px;
+    min-width: 100px;
     text-align: center;
   }
 
